[package]
name = "whistlinoak"
description = "Annotated even-arity trees backed by mmaps"
categories = ["data-structures"]
keywords = ["tree", "mmap", "annotation", "data", "structure"]

repository = "https://github.com/ureeves/whistlinoak"
authors = ["Eduardo Leegwater Simões <eduardols@protonmail.com>"]
version = "0.1.0"

edition = "2021"
license = "MIT OR Apache-2.0"

exclude = [".github/*", ".gitignore"]

[dependencies]
memmap2 = "0.5"

[dev-dependencies]
tempfile = "3.3"
rand = "0.8"
blake2b_simd = "1"
clap = { version = "3", features = ["derive"] }
